fixed user dashboard and project show to handle an infinite number of tasks and projects and catch the overflow

--- a/frontend/src/components/ProjectHome/ProjectTaskIndex/ProjectTaskIndex.css
+++ b/frontend/src/components/ProjectHome/ProjectTaskIndex/ProjectTaskIndex.css
@@ -144,3 +144,13 @@
     margin-top: 5px;
     margin-right: 10px;
 }
+
+.project-show-task-row-wrapper {
+    overflow: scroll;
+    max-height: 500px;
+}
+
+.project-show-task-row-wrapper::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
