--- a/frontend/src/components/Task_CRUD/UserTaskIndex/UserTaskIndex.css
+++ b/frontend/src/components/Task_CRUD/UserTaskIndex/UserTaskIndex.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding: 2px;
     border-radius: .375rem;
+
 }
 
 .task-table-header {
@@ -19,4 +20,14 @@
 .no-hover-ut:hover {
     cursor:unset;
     background-color: #2A2B2D;
+}
+
+.user-home-task-table-wrapper {
+    max-height: 500px;
+    overflow: scroll;
+}
+
+.user-home-task-table-wrapper::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
